--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "@emotion/react": "^11.10.0",
         "@emotion/styled": "^11.10.0",
         "@mui/icons-material": "^5.8.4",
@@ -25,6 +23,8 @@
         "@types/react-router-dom": "^5.3.3",
         "firebase": "8.0",
         "prop-types": "^15.8.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-input-mask": "^2.0.4",
         "react-router-dom": "^6.3.0",
         "react-toastify": "^9.0.8",
@@ -34,6 +34,7 @@
     "devDependencies": {
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
+        "@types/react-input-mask": "^3.0.1",
         "@vitejs/plugin-react": "^2.2.0",
         "typescript": "^4.6.4",
         "vite": "^3.2.0"
