--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
         "react-input-mask": "^2.0.4",
         "react-router-dom": "^6.3.0",
         "react-toastify": "^9.0.8",
+        "react-uuid": "^2.0.0",
         "typescript": "^4.7.4",
+        "uuid": "^9.0.0",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
         "@types/react-input-mask": "^3.0.1",
+        "@types/uuid": "^8.3.4",
         "@vitejs/plugin-react": "^2.2.0",
         "typescript": "^4.6.4",
         "vite": "^3.2.0"
